[package]
name = "masq"
version = "0.1.0"
edition = "2024"
authors = ["spocot"]
description = "Masq is a command-line tool for applying a shared base colorscheme theme to multiple target applications, toolkits, or libraries."
license = "MIT"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = { version = "0.9.2" }
